Closed Bug 453766 Opened 17 years ago Closed 15 years ago

Checking mCopyState and copySucceeded in nsMsgLocalMailFolder::EndCopy is not needed because these values is checked at the beginning of the function.

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.3a1

People

(Reporter: hiro, Assigned: hiro)

Details

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.15) Gecko/20080702 Ubuntu/8.04 (hardy) Firefox/2.0.0.15 Kazehakase/0.5.4 Build Identifier: Checking mCopyState and copySucceeded in nsMsgLocalMailFolder::EndCopy is not needed because these values are checked at the beginning of the function. Reproducible: Always Steps to Reproduce: 1. 2. 3.
Attached patch Proposed patch (obsolete) — Splinter Review
The patch also changes the function argument name. copySucceeded -> aCopySucceeded
Attachment #336977 - Flags: superreview?(bienvenu)
Attachment #336977 - Flags: review?(bienvenu)
Component: General → Backend
Product: Thunderbird → MailNews Core
QA Contact: general → backend
Assignee: nobody → poincare
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Version: unspecified → Trunk
thx for the patch, I de-bitrotted it and it seems fine.
Attachment #336977 - Attachment is obsolete: true
Attachment #483970 - Flags: review+
Attachment #336977 - Flags: superreview?(bienvenu)
Attachment #336977 - Flags: review?(bienvenu)
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: