Bug 453766 - Checking mCopyState and copySucceeded in nsMsgLocalMailFolder::EndCopy is not needed because these values is checked at the beginning of the function.; r=bienvenu

--HG--
extra : rebase_source : 5624ccab59ee2841f52b46b716408add1751ecc9